bynkc/tests/fixtures/negative/497_messages_missing_locale_types_dependency/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" @reference {
  "greeting" => "Hello"
}
